# voxely

./: .gitmodules  CMakeLists.txt  Makefile  README.md  shader.sh
src/: bvh.h  main.cpp
src/tree/: main.cpp  s64tree.h
